# DuggerBot

./: .clinerules  .coveragerc  .env.example  .gitignore  LICENSE  mcp_config.json  pyproject.toml
config/: instance.yaml  providers.yaml  routing.yaml
docs/: DuggerBot_SDD_v0_1.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md
docs/decisions/: pending.md
docs/directives/: DuggerBot_Phase1_Directive.md  DuggerBot_Phase2_Directive.md  DuggerBot_Phase3_5_Directive.md  DuggerBot_Phase3_6_Directive.md  DuggerBot_Phase3_7_Directive.md  DuggerBot_Phase3_8_Directive.md  DuggerBot_Phase3_9_Directive.md  DuggerBot_Phase3_Directive.md
docs/issues/: ISSUE-001-router-coverage-debt.md  ISSUE-002-verify-token-caller-identity.md  ISSUE-003-task-source-phase1-touch.md  ISSUE-004-deployment-scripts-gitignored.md  ISSUE-005-nssm-path-git-uv.md  ISSUE-006-nssm-git-auth.md
docs/sdd/: SDD-001-DuggerBot.md
docs/state/: current.md
duggerbot/: __init__.py  _version_info.py  context_store.py  heartbeat.py  main.py  telegram.py  version.py
duggerbot/directives/: __init__.py  schema.py  store.py
duggerbot/mcp/: __init__.py  auth.py  dev_tools.py  handlers.py  server.py  tools.py
duggerbot/ponds/: __init__.py  blog.py  calendar.py  devto.py  (+3 more)
scripts/: google_auth.py  initialize.ps1  migrate_privybot.py  nssm_deploy.ps1
tests/: conftest.py  test_context_store.py  test_directive_store.py  test_directives.py  test_heartbeat.py  test_main.py  test_ponds.py  test_telegram.py  test_version.py
(+57 files in other folders)
