[project]
name = "duggerbot"
version = "0.1.0"
description = "DuggerBot — personal AI agent infrastructure. TOBOR lives here."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "google-generativeai>=0.7.0",
    "groq>=0.9.0",
    "anthropic>=0.28.0",
    "openai>=1.35.0",      # OpenRouter uses OpenAI-compatible API
    "ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.4.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",       # For TestClient
]

[tool.pytest.ini_options]
addopts = "-p asyncio -p pytest_cov --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["duggerbot"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
